About to try rounding all width, height, left/top offsets in the observable CSS properties to attempt to address some subtle alignment issues in the window manager.

--- a/client/app/css/schema.css
+++ b/client/app/css/schema.css
@@ -136,9 +136,13 @@ position: fixed; top: 50%; left: 50%; padding: 0px; margin: 0px; z-index: -2;
 .classObservableWindowHost {
 position: fixed; top: 50%; left: 50%; padding: 0px; margin: 0px; z-index: -2; -moz-border-radius: 8px; border-radius: 8px; overflow: hidden;
 }
+.classObservableWindowChrome {
+position: fixed; top: 50%; left: 50%; padding: 0px; margin: 0px; z-index: -2; -moz-border-radius: 8px; border-radius: 8px; overflow: hidden;
+}
 
 .classObservableWindow {
-margin: 4px; font-family: Verdana, Arial; font-size: 10pt; border: 1px solid #00FF00; overflow: hidden;
+position: fixed; top: 50%; left: 50%; padding: 0px; margin: 0px; font-family: Verdana, Arial; 
+font-size: 10pt; border: 1px solid #00FF00; overflow: hidden; z-index: -2;
 }
 
 
